8170655: [posix] Fix minimum stack size computations

Reviewed-by: dcubed, coleenp